created hotel activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,10 @@
         app:menu="@menu/nav_bar_menu"
         app:itemIconTint="@android:color/white"
         app:itemTextColor="@android:color/white" />
+
     <FrameLayout
+
+        android:id="@+id/fragment_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation">
