--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -9,8 +9,10 @@
         android:id="@+id/search_area"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_margin="10dp"
+        android:padding="5dp"
         android:weightSum="10"
+        android:background="@drawable/search_border"
         android:orientation="horizontal">
         <EditText
             android:padding="10dp"
@@ -22,6 +24,7 @@
             android:padding="10dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/round_border"
             android:text="Go"
             android:layout_weight="2"/>
     </LinearLayout>
