--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,16 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/nav_bar_menu"
-        app:itemIconTint="@android:color/white"
-        app:itemTextColor="@color/black" />
+        app:itemTextColor="@color/edit_text_color"
+        app:itemBackground="@drawable/click_state_navigation_bar"
+        app:menu="@menu/nav_bar_menu" />
 
     <FrameLayout
-
         android:id="@+id/fragment_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottom_navigation">
-
-    </FrameLayout>
+        android:layout_above="@id/bottom_navigation" />
 </RelativeLayout>
