--- a/app/src/main/res/layout/hotel_list_item.xml
+++ b/app/src/main/res/layout/hotel_list_item.xml
@@ -1,69 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:gravity="center_vertical"
     android:padding="10dp">
 
-
-    <ImageView android:id="@+id/imgIcon"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/hotel"
-        android:gravity="center_horizontal"
-        android:padding="8dp" />
-
-    <TextView android:id="@+id/txtTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+    <TextView
+        android:id="@+id/hotel_price"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:background="@drawable/dollar_icon"
         android:padding="8dp"
-        android:textStyle="italic"
-        android:textSize="16sp"
-        android:textColor="#3F51B5" />
-    
+        android:gravity="center"
+        android:src="@drawable/hotel"
+        android:textColor="#3F51B5"
+        android:textSize="14sp"
+        tools:text="500"
+        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="8dp">
-        <ImageView
-            android:id="@+id/review1"
-            android:padding="8dp"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:visibility="gone"
-            android:src="@drawable/star"/>
-        <ImageView
-            android:id="@+id/review2"
-            android:padding="8dp"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:visibility="gone"
-            android:src="@drawable/star"/>
-        <ImageView
-            android:id="@+id/review3"
-            android:padding="8dp"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:visibility="gone"
-            android:src="@drawable/star"/>
-        <ImageView
-            android:id="@+id/review4"
-            android:padding="8dp"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:visibility="gone"
-            android:src="@drawable/star"/>
-        <ImageView
-            android:id="@+id/review5"
-            android:padding="8dp"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:visibility="gone"
-            android:src="@drawable/star"/>
-    </LinearLayout>
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:textColor="#3F51B5"
+            android:textSize="16sp"
+            android:textStyle="italic" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="8dp">
+
+            <ImageView
+                android:id="@+id/review1"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:padding="8dp"
+                android:src="@drawable/star"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/review2"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:padding="8dp"
+                android:src="@drawable/star"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/review3"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:padding="8dp"
+                android:src="@drawable/star"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/review4"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:padding="8dp"
+                android:src="@drawable/star"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/review5"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:padding="8dp"
+                android:src="@drawable/star"
+                android:visibility="gone" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
