--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -20,13 +20,15 @@
             android:hint="Enter Location"
             android:layout_height="wrap_content"
             android:layout_weight="8"/>
+
         <Button
-            android:padding="10dp"
+            android:id="@+id/go_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:background="@drawable/round_border"
-            android:text="Go"
-            android:layout_weight="2"/>
+            android:padding="10dp"
+            android:text="Go" />
     </LinearLayout>
 
     <ListView
