--- a/app/src/main/res/layout/eat_list_item.xml
+++ b/app/src/main/res/layout/eat_list_item.xml
@@ -23,8 +23,9 @@
             android:gravity="center"
             android:padding="10dp"
             android:text="TextView"
+            android:textColor="#3F51B5"
             android:textSize="16dp"
-            android:textStyle="bold" />
+            android:textStyle="italic" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,6 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
+                android:textColor="#3F51B5"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -44,7 +46,8 @@
                 android:id="@+id/address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="#3F51B5" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
